2014-12-16 Philipp Klaus Krause <pkk AT spth.de>

	* configure.in,
	  doc/Makefile.in:
	  Remove dependency on pdfopt.
	* support/regression/tests/bug-2313.c:
	  Regression test for bug #2313.

2014-12-13 Philipp Klaus Krause <pkk AT spth.de>

	* device/lib/pic16/libc/string/strncpy.c,
	  support/regression/tests/bug-2231.c:
	  Fix strncpy() in pic16. Patch by Diego Herranz.

2014-12-12 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/SDCCcse.c (ifxOptimize): fixed bugs #2313/2330

2014-12-04 Philipp Klaus Krause <pkk AT spth.de>

	* support/regression/tests/gcc-torture-execute-20080529-1.c,
	  support/regression/tests/longlong.c:
	  Disable tests that fail due to broken gbz80 long long multiplication (bug #2329).
	* support/regression/tests/bug-2231.c,
	  support/regression/tests/float_single.c,
	  support/regression/tests/gcc-torture-execute-stdarg-4.c,
	  support/regression/tests/gcc-torture-execute-stdarg-5.c,
	  support/regression/tests/vaargs.c:
	  Disable failing tests for pic16.

2014-12-03 Ben Shi <powerstudio1st AT 163 DOT com>
	* support/regression/tests/gcc-torture-execute-950511-1.c:
	  Disabled. Since it fails on FreeBSD.

2014-12-02 Ben Shi <powerstudio1st AT 163 DOT com>
	* support/regression/tests/gcc-torture-execute-20050826-1.c:
	* support/regression/tests/gcc-torture-execute-950511-1.c:
	  Enabled for stm8.

2014-12-02 Philipp Klaus Krause <pkk AT spth.de>

	* device/lib/_mullonglong.c,
	  support/regression/tests/longlong.c:
	  Make long long multiplication independent of endianness.

2014-12-02 Ben Shi <powerstudio1st AT 163 DOT com>
	* sim/ucsim/stm8.src/stm8.cc:
	  Make stack larger, since some test cases cost large stack space.

2014-12-02 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/ralloc.c,
	  src/z80/ralloc.c:
	  Do not try to use spill locations that are not on the stack in ports that can't handle it.
	* support/regression/tests/longlong.c:
	  Enable some long long tests that pass for stm8 now.
